k8s/addons/base/authentik/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authentik-redirect
  namespace: authentik
spec:
  parentRefs:
    - name: gateway-api
      namespace: istio-system
      kind: Gateway
      sectionName: http
  hostnames:
    - ${TF_AUTHENTIK_HOSTNAME}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authentik
  namespace: authentik
spec:
  parentRefs:
    - name: gateway-api
      namespace: istio-system
      kind: Gateway
      sectionName: https
  hostnames:
    - ${TF_AUTHENTIK_HOSTNAME}
  rules:
    - backendRefs:
        - name: authentik-server
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            set:
              - name: X-Forwarded-Proto # Reference: https://docs.goauthentik.io/install-config/reverse-proxy/
                value: "https"
              - name: X-Forwarded-Port
                value: "443"
